@@ -2,7 +2,7 @@ package com.solinftec.stock.service;
 
 import java.util.List;
 import java.util.Optional;
-
+import java.util.stream.Collectors;
 
 import com.solinftec.stock.dto.StockDTO;
 import com.solinftec.stock.model.Stock;
@@ -26,7 +26,7 @@ public class StockService implements IStockService {
         return stockRepository.findAll()
                 .stream()
                 .map(StockDTO::new)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public List<StockDTO> gettAll(){
